Fix alignment for h1 in style.css

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,9 @@ body {
   flex-direction: column;
 }
 
+h1 {
+  align-items: center;
+}
 /* Navigation bar */
 nav {
   display: flex;
